--- a/gigs/_posts/2016-03-23-cafe-1001.md
+++ b/gigs/_posts/2016-03-23-cafe-1001.md
@@ -3,4 +3,5 @@ location:    Cafe 1001, 91 Brick Lane
 time:        '20:00'
 latitude:    51.52078
 longitude:   -0.07207
+facebook_id: 1760046604207719
 ---
